--- a/plugins/gatsby-plugin-source-api/package.json
+++ b/plugins/gatsby-plugin-source-api/package.json
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "query-string": "7.0.0"
+  }
 }
